name:           RatRace
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         user

executable ratrace
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   comonad >=4.2 && <4.3,
                   astar >=0.2 && <0.3,
                   split >=0.2.2,
                   mtl   >=2.2.1,
                   parallel >=3.2.0.4,
                   containers >=0.5.5.1,
                   random >=1.0.1.1
  ghc-options:     -O2 -threaded -rtsopts

